[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyoui"
version = "1.0.0"
description = "Lookup the IEEE's OUI table by MAC, MAC prefix, organization name, or country"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { name = "Pascal Eberlein", email = "pascal@eberlein.io" },
]
keywords = ["oui", "mac", "lookup"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
]

# Runtime dependencies
dependencies = [
  "requests",
  "loguru",
  "pycountry",
]

[project.urls]
Homepage = "https://github.com/nbdy/pyoui"
Issues = "https://github.com/nbdy/pyoui/issues"

[project.scripts]
pyoui = "pyoui.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.uv]
# Optional: declare a minimum uv version and dev dependencies for contributors
required-version = ">=0.4.0"
dev-dependencies = [
  "pytest",
]
