[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyoui"
version = "1.1.0"
description = "Lookup the IEEE's OUI table by MAC, MAC prefix, organization name, or country"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "nbdy", email = "me@nbdy.io" },
]
keywords = ["oui", "mac", "lookup"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
]

# Runtime dependencies
dependencies = [
  "requests==2.32.5",
  "loguru==0.7.3",
  "pycountry==24.6.1",
  "tqdm==4.67.1",
  "rich==13.9.4",
]

[project.urls]
Homepage = "https://github.com/nbdy/pyoui"
Issues = "https://github.com/nbdy/pyoui/issues"

[project.scripts]
pyoui = "pyoui.__main__:main"

[project.optional-dependencies]
dev = ["pytest==8.4.2", "ruff==0.7.0", "pre-commit==3.5.0"]

[tool.uv]
required-version = ">=0.4.0"

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "ruff==0.7.0",
  "pre-commit==3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E", "F", "I", "N", "W", "D",
  "E501", "D401","D100", "D104",
  "D101", "D102", "D103", "D107"
]
